:bug: certif: align icon in the vertical center

--- a/certif/app/styles/components/session-finalization-step-container.scss
+++ b/certif/app/styles/components/session-finalization-step-container.scss
@@ -4,6 +4,7 @@
   margin-bottom: 24px;
 
   &__header {
+    align-items: center;
     border-radius: 8px;
     display: flex;
     background: $grey-10;
